--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "devicon": "^2.17.0",
     "next": "15.5.12",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "swiper": "^12.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
