--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "devicon": "^2.17.0",
+    "gsap": "^3.14.2",
     "next": "15.5.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
